--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,17 @@ before_install:
   - docker build -t roshinipe/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run roshinipe/docker-react npm run test -- --coverage
+  - docker run roshinipe/docker-react npm run test -- --coverage 
+
+# deploy:
+#   provider: elasticbeanstalk
+#   region: "ap-mumbai"
+#   app: "docker"
+#   env: "Docker-env"
+#   bucket_name: "elasticbeanstalk-ap-mumbai-306476627547"
+#   bucket_path: "docker"
+#   on:
+#     branch: master
+#   access_key_id: $AWS_ACCESS_KEY
+#   secret_access_key:
+#     secure: "$AWS_SECRET_KEY"
